--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -42,6 +42,7 @@ body {
 }
 
 .ButtonLink {
+  background-color: rgb(61, 60, 60);
   color: var(--black);
   border: 1px solid var(--white);
   box-sizing: border-box;
