--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,12 @@
 }
 
 :root {
-  --primary: purple;
+  --primary: rgb(211, 179, 211);
   --black: rgb(211, 179, 211);
   --blackLighter: #9e9e9e;
   --grayLight: #f5f5f5;
   --grayMedium: #e5e5e5;
-  --white: purple;
+  --white: white;
   --frontEnd: #6bd1ff;
   --backEnd: #00c86f;
 }
