--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 }
 
 :root {
-  --primary: rgb(211, 179, 211);
-  --black: rgb(211, 179, 211);
+  --primary: purple;
+  --black: purple;
   --blackLighter: #9e9e9e;
   --grayLight: #f5f5f5;
   --grayMedium: #e5e5e5;
