--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 :root {
   --primary: purple;
-  --black: purple;
+  --black: black;
   --blackLighter: #9e9e9e;
   --grayLight: #f5f5f5;
   --grayMedium: #e5e5e5;
